<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:override="true">CottonWorkflow</string>
    <string name="fragment_sample_list_fab_content_description" />
    <string name="dialog_accept_new_sample_message">Add this new barcode to the database?</string>
    <string name="frag_weight_sample_header">Weigh the sample.</string>
    <string name="dialog_sample_action_sample_message">Choose a sample action</string>
    <string name="dialog_sample_action_print_label_rb">Print Label</string>
    <string name="dialog_sample_action_add_rb">Add subsample</string>
    <string name="dialog_sample_action_weigh_rb">Weigh</string>
    <string name="action_menu_main_bot_tb_settings_title">Settings</string>
    <string name="action_menu_main_bot_tb_home_title">Home</string>
    <string name="preferences_devices">Devices</string>
    <string name="preferences_scale_device_chooser">Scale</string>
    <string name="preferences_printer_device_chooser">Printer</string>
    <string name="choose_paired_bluetooth_devices_title">Choose a wireless device to pair with.</string>
    <string name="list_item_sample_weight_diff">Weight differs by %1$s</string>
    <string name="dialog_sample_action_delete_rb">Delete</string>
    <string name="frag_print_sample_header">Print sample barcode</string>
    <string name="print">Print</string>
    <string name="frag_print_no_id_set">Please choose a printer first.</string>
    <string name="frag_print_explanation">The text must be compliant with CODE_39 specifications. It must be no greater than 10 numeric characters. Asterisks are automatically included.</string>
    <string name="frag_print_connection_failed">Failed to connect with printer.</string>
    <string name="frag_sample_list_actions_text">Actions</string>
    <string name="frag_print_cant_connect_to_device">Device is unreachable.</string>
    <string name="preferences_device_id_clear_title">Clear devices from memory</string>
    <string name="action_menu_main_bot_tb_save_title">Export</string>
    <string name="frag_sample_list_no_printer">No printer is connected.</string>
    <string name="frag_sample_list_scan_a_sample">Scan a sample</string>
    <string name="frag_sample_list_first_barcode_scan">Scan your first barcode</string>
    <string name="canceled">Canceled</string>

    <string name="grams_unit" translatable="false">%sg</string>
    <string name="preferences_start_id_chooser">Start ID</string>
    <string name="preferences_workflow">Workflow</string>
    <string name="pref_frag_code_exists_warning">%s code already exists</string>
    <string name="preferences_workflow_start_id_summary">Your next ID will be %s</string>
    <string name="frag_sample_list_id_error">Max ID reached, please update start ID in preferences.</string>
    <string name="preferences_workflow_id_to_long_error">Start IDs must be 10 characters or less.</string>
    <string name="action_menu_main_top_scale_title">Scale Connection</string>
    <string name="action_menu_main_top_printer_title">Printer Connection</string>
    <string name="preferences_profile">Person</string>
    <string name="pref_person_title">Person</string>
    <string name="pref_person_summary">This name will be saved in the database for each scan and weigh action.</string>
    <string name="pref_person_require_title">Require User</string>
    <string name="pref_person_require_summary">Option to require a person for each action in the app.</string>
    <string name="pref_profile_person_require_summary">When to ask the user for person data.</string>
    <string name="pref_profile_person_require_title">Require Person Interval</string>

    <string name="verify_collector_title">Is this still %s?</string>
    <string name="verify_collector_no_button">No</string>
    <string name="verify_collector_yes_button">Yes</string>
    <string name="verify_collector_neutral_button">Don\'t ask again</string>
    <string name="verify_collector_new_collector">Do you want to save the name of the person collecting data?</string>
    <string name="frag_device_chooser_help_message">Try resetting your device or replugging your wireless interface.</string>
    <string name="frag_device_chooser_reset_message">Try Again</string>
    <string name="connect">Connect</string>
    <string name="frag_sample_list_not_connected">Device not connected.</string>
    <string name="frag_scale_sample_weight_cant_be_empty">You must enter a valid weight.</string>
    <string name="barcode">Barcode</string>
    <string name="frag_sample_total_weight">Total Weight</string>
    <string name="frag_sample_total_weight_hint">Enter weight</string>
    <string name="frag_sample_seed_weight">Seed Weight</string>
    <string name="frag_sample_lint_weight">Lint Weight</string>
    <string name="preferences_scale_jitter_threshold">Ignore Scale Jitter Threshold</string>
    <string name="preferences_scale_jitter_thresh_summary">A definable threshold that lets the user ignore scale updates when the difference between measurements is very small.</string>
    <string name="frag_sample_test_weight">Test</string>
    <string name="frag_sample_test_complete">Test Weight Succeeded</string>
    <string name="dialog_sample_action_workflow_rb">Workflow</string>
    <string name="dialog_sample_action_edit_rb">Edit</string>
    <string name="list_item_seed_title">Seed %s</string>
    <string name="list_item_lint_title">Lint %s</string>
    <string name="list_item_sample_parent_title">Parent</string>
    <string name="list_item_test_title">Test %s</string>
    <string name="list_item_sample_uncollected">Uncollected</string>
    <string name="list_item_sample_unscanned">Unscanned</string>
    <string name="frag_sample_scan_test_label">Please scan the Test label.</string>
    <string name="dialog_sample_action_scan_rb">Scan HVI Barcode</string>
    <string name="save">Save</string>
    <string name="act_main_sample_export_title">Export Samples</string>
    <string name="act_main_sample_export_message">Number of samples to export: %s</string>
    <string name="frag_device_chooser_no_bt">No Bluetooth adapter found.</string>
    <string name="preferences_error_check_threshold_title">Error Threshold</string>
    <string name="preferences_error_check_threshold_summary">Analysis weight will be red when the difference between the total weight and the sum of the seed and lint weight differs by this amount.</string>
    <string name="preferences_test_check_threshold_title">Test Weight Threshold</string>
    <string name="preferences_test_check_threshold_summary">This defines the amount of Test lint the user will acquire.</string>
    <string name="act_main_press_back_twice">Press the back button again to close.</string>
    <string name="frag_sample_save_btn">Save</string>
    <string name="frag_sample_ask_resolve_new_sample_title">Save or Delete data?</string>
    <string name="frag_sample_ask_resolve_new_sample_message">Save new sample to database or delete it.</string>
    <string name="delete">Delete</string>
    <string name="pref_workflow_error_threshold_title">Enable Error Threshold</string>
    <string name="pref_workflow_error_threshold_summary">This will enable a notification when final weight sums do not match the initial total weight using a threshold.</string>
    <string name="preferences_scale_config_helper_title">Scale Configuration Helper</string>
    <string name="preferences_scale_config_helper_summary">When using an Ohaus scale without their Ohaus Bluetooth Interface, follow this configuration guide to setup your scale.</string>
    <string name="ohaus_com1_helper_text">\nWhen using the SerialIO Serial-to-Bluetooth device you must additionally enable: \n\n\t\t1)COM1 Baud rate to 9600. \n\t\t2)COM1 Parity to 8 None. \n\t\t3)Stop bit to 2.</string>
    <string name="ohaus_print_settings_step_1">First, set the scale PRINT1 settings.</string>
    <string name="ohaus_helper_tree_content_description">Defender 5000 settings tree</string>
    <string name="ohaus_helper_print_on_stable_content_description">Ohaus manual showing print on stable setting.</string>
    <string name="ohaus_manual_serial_io_content_description">Serial IO serial to Bluetooth device.</string>
    <string name="ohaus_manual_com1_settings_content_description">COM1 settings for Ohaus</string>
    <string name="ohaus_helper_general_settings_text">Ohaus scales should have: \nPrint on Stable enabled\nPrint Stable on Zero enabled\nCOM1 Baud Rate 9600\nParity set to 8 None\nStop bit set to 2\n(Optional) Print Content Numeric set. </string>
    <string name="na">NA</string>
    <string name="dialog_sample_delete_confirm_title">Confirm Delete Sample</string>
    <string name="dialog_sample_delete_confirm_message">This action is permanent.</string>
    <string name="pref_workflow_test_enabled_title">Collect HVI Test Weight</string>
    <string name="pref_workflow_test_enabled_summary">Capture and display the weight of the HVI sample throughout the app.</string>
    <string name="update">Update</string>
    <string name="action_menu_main_top_workflow_title">Workflow</string>
    <string name="action_menu_main_top_delete_title">Delete</string>
    <string name="frag_sample_test_barcode_header">Barcode</string>
    <string name="frag_sample_barcode_hint">Enter Barcode</string>
    <string name="dialog_sample_workflow_confirm_title">Restart Workflow?</string>
    <string name="dialog_sample_workflow_confirm_message">This will restart the workflow from the beginning.</string>
    <string name="frag_sample_barcode_exists">Barcode already exists.</string>
    <string name="cotton_file_prefix">Cotton_</string>
    <string name="action_menu_main_top_note_title">Note</string>
    <string name="frag_sample_note_dialog_title">Write a Note</string>
    <string name="frag_sample_note_dialog_message">This will be saved and included in the export file.</string>
    <string name="export_failed">Export Failed</string>
    <string name="delete_samples">Delete Current Samples?</string>
    <string name="delete_samples_message">This action is permanent.</string>
    <string name="pref_device_usb_barcode_scanner_enabled_title">USB Barcode Scanner</string>
    <string name="pref_device_usb_barcode_scanner_enabled_summary">When enabled, this will assume a USB barcode reader is connected; otherwise, an internal barcode scanner camera will be used.</string>
    <string name="frag_sample_list_usb_reader_dialog_title">Sample Input</string>
    <string name="frag_sample_list_empty_code_error">Barcodes must not be empty.</string>
    <string name="pref_stability_enabled_title">Software Stability</string>
    <string name="pref_stability_enabled_summary">This setting allows the app to handle stability checks when the hardware scale is not capable.</string>
    <string name="pref_stability_threshold_title">Stability Threshold</string>
    <string name="pref_stability_threshold_summary">When software stability is enabled, this is the threshold to detect stability between scale readings.</string>
    <string name="pref_experiment_summary">This title will be saved to new experiments.</string>
    <string name="pref_experiment_title">Experiment</string>
    <string name="pref_workflow_sound_title">Enable Sound</string>
    <string name="pref_workflow_sound_summary">Sounds will play for various actions throughout the workflow.</string>
</resources>