<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item app:showAsAction="always"
        android:id="@+id/action_menu_main_top_scale"
        android:icon="@drawable/scale_off"
        android:title="@string/action_menu_main_top_scale_title"/>

    <item app:showAsAction="always"
        android:visible="false"
        android:id="@+id/action_menu_main_top_workflow"
        android:icon="@drawable/sitemap"
        android:title="@string/action_menu_main_top_workflow_title"/>

    <item app:showAsAction="always"
        android:visible="false"
        android:id="@+id/action_menu_main_top_note"
        android:icon="@drawable/pencil"
        android:title="@string/action_menu_main_top_note_title"/>

    <item app:showAsAction="always"
        android:visible="false"
        android:id="@+id/action_menu_main_top_delete"
        android:icon="@drawable/delete"
        android:title="@string/action_menu_main_top_delete_title"/>
</menu>